--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <p> This is the first code I've ever written, so bear with me.</p>
 So far, so good.
 <p>You can find more about me <a href="https://www.linkedin.com/in/delucalauren">here.</a></p>
-<img src="profile.jpg">
+<img src="profile.JPG">
 <p>Aren't I cute? My girlfriend took that pic. Thank God for filters.</p>
